bookinfo/bookinfo-microsvc/deploy/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bookinfo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookinfo-web
            port:
              number: 80
